adicionado parte de experiencia
realizado adicionamento da parte de experiencia

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <div class="container">
     <header>
-        <img src="/img/marca.svg">
+        <img src="/img/marca.svg" alt="marca" class="front-logo">
         <nav>
             <ul class="menu">
                 <li> <a href="#experiencia"></a>Experiencia</li>
@@ -20,12 +19,68 @@
         </nav>
     </header>
     <section class="box1">
-        <article class="logo">
-            <img src="/img/perfil.jpg">
+        <article>
+            <img src="/img/perfil.jpg" class="imagem-frente">
         </article>
         <article class="apresentacao">
-            <h2> Desenvolvedor<br> Front End &<br> UX/UI Designer</h2>
+            <h2 class="detalhe"> Desenvolvedor<br> Front End &<br> UX/UI Designer</h2>
             <p>Localizado em Sao Paulo/Guarulhos</p>
+        </article>
+    </section>
+    <div class="grid-container">
+    <section class="experiencia">
+        <article>
+            <h2> Experiência</h2>
+        </article>
+    </section>
+    <section class="cargos">
+        <article>
+            <p class="sobre-mim">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.<br> Para aplicativos web como a rede social Dogs eu <br>trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+            <div class="bikcraft">
+                <div>
+                <h2>Bikcraft</h2>
+                <p>No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+                </div>
+                <div>
+                    <h2>Desenvolvedor Junior</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>UX Design</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="surfbot">
+                <div>
+                <h2>Bikcraft</h2>
+                <p>No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+                </div>
+                <div>
+                    <h2>Desenvolvedor Junior</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>UX Design</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="brafe">
+                <div>
+                <h2>Bikcraft</h2>
+                <p>No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+                </div>
+                <div>
+                    <h2>Desenvolvedor Junior</h2>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>UX Design</li>
+                    </ul>
+                </div>
+            </div>
         </article>
     </section>
     </div>
